--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,173 +1,166 @@
 <!DOCTYPE html>
-<html style="margin: 0;padding: 0">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width">
-    <style type="text/css">
-      * {
-        margin: 0;
-        padding: 0;
-        font-size: 100%;
-        font-family: 'Avenir Next', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-      }
-      img {
-        max-width: 100%;
-        margin: 0 auto;
-        display: block;
-      }
-      .body-wrap,
-      body {
-        width: 100% !important;
-        height: 100%;
-        background: #efefef;
-        -webkit-font-smoothing: antialiased;
-        -webkit-text-size-adjust: none;
-      }
-      a {
-        color: #74CCD1;
-        text-decoration: none;
-      }
-      .text-center {
-        text-align: center;
-      }
-      .text-right {
-        text-align: right;
-      }
-      .text-left {
-        text-align: left;
-      }
-      .button {
-        display: inline-block;
-        color: white;
-        background: #74CCD1;
-        border: solid #74CCD1;
-        border-width: 10px 20px 8px;
-        font-weight: bold;
-        border-radius: 4px;
-      }
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
-        margin-bottom: 20px;
-        line-height: 1.25;
-        color: #333333;
-      }
-      h1 {
-        font-size: 22px;
-      }
-      h2 {
-        font-size: 18px;
-      }
-      h3 {
-        font-size: 24px;
-      }
-      h4 {
-        font-size: 20px;
-      }
-      h5 {
-        font-size: 16px;
-      }
-      ol,
-      p,
-      ul {
-        font-size: 16px;
-        font-weight: normal;
-        margin-bottom: 20px;
-      }
-      strong {
-        color #333333;
-      }
-      .container {
-        display: block !important;
-        clear: both !important;
-        margin: 0 auto !important;
-        max-width: 580px !important;
-      }
-      .container table {
-        width: 100% !important;
-        border-collapse: collapse;
-      }
-      .container .masthead {
-        padding: 40px 0;
-        background: white;
-        border-bottom: solid 3px #71c3c7;
-        color: white;
-      }
-      .container .masthead h1 {
-        margin: 0 auto !important;
-        max-width: 90%;
-        text-transform: uppercase;
-      }
-      .container .content {
-        background: white;
-        padding: 30px 35px;
-      }
-      .container .content.footer {
-        background: none;
-      }
-      .container .content.footer p {
-        margin-bottom: 0;
-        color: #888;
-        text-align: center;
-        font-size: 14px;
-      }
-      .container .content.footer a {
-        color: #888;
-        text-decoration: none;
-        font-weight: bold;
-      }
-      #avatar {
-        width: 70px;
-        height: 70px;
-        border-radius: 50%;
-        display: unset;
-      }
-      .username {
-        font-size: 13px;
-      }
+<html lang="en">
+<head>
+<title>Blendin</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<style type="text/css">
+    /* CLIENT-SPECIFIC STYLES */
+    #outlook a{padding:0;} /* Force Outlook to provide a "view in browser" message */
+    .ReadMsgBody{width:100%;} .ExternalClass{width:100%;} /* Force Hotmail to display emails at full width */
+    .ExternalClass, .ExternalClass p, .ExternalClass span, .ExternalClass font, .ExternalClass td, .ExternalClass div {line-height: 100%;} /* Force Hotmail to display normal line spacing */
+    body, table, td, a{-webkit-text-size-adjust:100%; -ms-text-size-adjust:100%;} /* Prevent WebKit and Windows mobile changing default text sizes */
+    table, td{mso-table-lspace:0pt; mso-table-rspace:0pt;} /* Remove spacing between tables in Outlook 2007 and up */
+    img{-ms-interpolation-mode:bicubic;} /* Allow smoother rendering of resized image in Internet Explorer */
 
-    </style>
-  </head>
-  <body
-    style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;height: 100%;background: #efefef;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: none;width: 100% !important;">
-    <table
-      class="body-wrap"
-      style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;height: 100%;background: #efefef;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: none;width: 100% !important;">
-      <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
-        <td
-          class="container"
-          style="margin: 0 auto !important;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;display: block !important;clear: both !important;max-width: 580px !important;">
-          <table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;border-collapse: collapse;width: 100% !important;">
-            <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
-              <td
-                align="center"
-                class="masthead"
-                style="margin: 0;padding: 40px 0;font-size: 100%;font-family: 'Quicksand', sans-serif;background: white;border-bottom: solid 3px #71c3c7;color: white;">
-                <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;"><%= image_tag("logo-app.png", size: "130x29") %></p>
-              </td>
-            </tr>
-            <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
-              <td class="content" style="margin: 0;padding: 30px 35px;font-size: 100%;font-family: 'Quicksand', sans-serif;background: white;">
-                <%= yield %>
-              </td>
-            </tr>
-          </table>
-          <table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;border-collapse: collapse;width: 100% !important;">
-            <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
-              <td class="content footer" align="center" style="margin: 0;padding: 30px 35px;font-size: 100%;font-family: 'Quicksand', sans-serif;background: none;">
-                <p style="margin: 0;padding: 0;font-size: 14px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 0;color: #888;text-align: center;"><%= t('.footer')%>
-                  <a href="#" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;color: #888;text-decoration: none;font-weight: bold;">Blendin</a>, <a style="color: #888;text-decoration: none;">Tweede Jan van der Heijdenstraat 67-3, 1074 XR</a></p>
-                <p style="margin: 0;padding: 0;font-size: 14px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 0;color: #888;text-align: center;">
-                  <a href="mailto:info@blendinnow.nl" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;color: #888;text-decoration: none;font-weight: bold;">info@blendinnow.nl</a>
-                </p>
-              </td>
-            </tr>
-          </table>
+    /* RESET STYLES */
+    body{margin:0; padding:0;}
+    img{border:0; height:auto; line-height:100%; outline:none; text-decoration:none;}
+    table{border-collapse:collapse !important;}
+    body{height:100% !important; margin:0; padding:0; width:100% !important;}
+
+    /* iOS BLUE LINKS */
+    .appleBody a {color:#68440a; text-decoration: none;}
+    .appleFooter a {color:#999999; text-decoration: none;}
+
+    /* MOBILE STYLES */
+    @media screen and (max-width: 525px) {
+
+        /* ALLOWS FOR FLUID TABLES */
+        table[class="wrapper"]{
+          width:100% !important;
+        }
+
+        /* ADJUSTS LAYOUT OF LOGO IMAGE */
+        td[class="logo"]{
+          text-align: left;
+          padding: 20px 0 20px 0 !important;
+        }
+
+        td[class="logo"] img{
+          margin:0 auto!important;
+        }
+
+        /* USE THESE CLASSES TO HIDE CONTENT ON MOBILE */
+        td[class="mobile-hide"]{
+          display:none;}
+
+        img[class="mobile-hide"]{
+          display: none !important;
+        }
+
+        img[class="img-max"]{
+          max-width: 100% !important;
+          height:auto !important;
+        }
+
+        /* FULL-WIDTH TABLES */
+        table[class="responsive-table"]{
+          width:100%!important;
+        }
+
+        /* UTILITY CLASSES FOR ADJUSTING PADDING ON MOBILE */
+        td[class="padding"]{
+          padding: 10px 5% 15px 5% !important;
+        }
+
+        td[class="padding-copy"]{
+          padding: 10px 5% 10px 5% !important;
+          text-align: center;
+        }
+
+        td[class="padding-meta"]{
+          padding: 30px 5% 0px 5% !important;
+          text-align: center;
+        }
+
+        td[class="no-pad"]{
+          padding: 0 0 20px 0 !important;
+        }
+
+        td[class="no-padding"]{
+          padding: 0 !important;
+        }
+
+        td[class="section-padding"]{
+          padding: 50px 15px 50px 15px !important;
+        }
+
+        td[class="section-padding-bottom-image"]{
+          padding: 50px 15px 0 15px !important;
+        }
+
+        /* ADJUST BUTTONS ON MOBILE */
+        td[class="mobile-wrapper"]{
+            padding: 10px 5% 15px 5% !important;
+        }
+
+        table[class="mobile-button-container"]{
+            margin:0 auto;
+            width:100% !important;
+        }
+
+        a[class="mobile-button"]{
+            width:80% !important;
+            padding: 15px !important;
+            border: 0 !important;
+            font-size: 16px !important;
+        }
+
+    }
+</style>
+</head>
+<body style="margin: 0; padding: 0;">
+
+<!-- HEADER -->
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+    <tr>
+        <td bgcolor="#ffffff">
+            <div align="center" style="padding: 0px 15px 0px 15px;">
+                <table border="0" cellpadding="0" cellspacing="0" width="500" class="wrapper">
+                    <!-- LOGO/PREHEADER TEXT -->
+                    <tr>
+                        <td style="padding: 20px 0px 30px 0px;" class="logo">
+                            <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                                <tr>
+                                    <td bgcolor="#ffffff" width="200" align="left">
+                                      <a href="https://community.blendinnow.nl" target="_blank">
+                                        <%= image_tag("logo-app.png", size: "200x45", style: "display: block; font-family: Helvetica, Arial, sans-serif; color: #666666; font-size: 16px;", border:0) %>
+                                      </a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </td>
-      </tr>
-    </table>
-  </body>
+    </tr>
+</table>
+
+
+<%= yield %>
+
+<!-- FOOTER -->
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+    <tr>
+        <td bgcolor="#ffffff" align="center">
+            <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
+                <tr>
+                    <td style="padding: 20px 0px 20px 0px;">
+                        <table width="500" border="0" cellspacing="0" cellpadding="0" align="center" class="responsive-table">
+                            <tr>
+                                <td align="center" valign="middle" style="font-size: 12px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#666666;">
+                                    <span class="appleFooter" style="color:#666666;">Tweede Jan van der Heijdenstraat 67-3, 1074 XR</span><br><a href="mailto:info@blendinnow.nl" style="color: #666666; text-decoration: none;">Contact us</a>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
+
+</body>
 </html>
