Added blend desing

--- a/app/assets/stylesheets/components/Card.scss
+++ b/app/assets/stylesheets/components/Card.scss
@@ -101,6 +101,33 @@ $returnEasing: cubic-bezier(0.4, 0.58, 0.57, 1);
 }
 
 
+.CardBlend{
+  margin: 1em;
+  .avatar-card-blend{
+    width: 100%;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.22) 0 7px 29px 0, inset #333 0 0 0 5px, inset rgba(255, 255, 255, 0.5) 0 0 0 6px;
+  }
+}
+.shake-card-blend{
+  width: 60%;
+  display: inline-block;
+}
+
+.link-to-blend-card{
+  text-decoration: none;
+  color: #333333;
+  transition: 0.1s;
+  border: 3px solid #fff;
+  display: block;
+  border-radius: 10px;
+  margin: 0 ;
+}
+.link-to-blend-card:hover{
+  border: 3px solid #c0c0c052;
+  border-style: dashed;
+}
 @media only screen and (min-width: 64em) {
   .Card {
     width: 240px;
@@ -108,5 +135,8 @@ $returnEasing: cubic-bezier(0.4, 0.58, 0.57, 1);
   }
   .CardBg {
     opacity: 0.6;
+  }
+  .link-to-blend-card{
+    margin: 0 10%;
   }
 }
