--- a/app/assets/stylesheets/components/Nav.css
+++ b/app/assets/stylesheets/components/Nav.css
@@ -1,6 +1,7 @@
 .topnav {
   overflow: hidden;
   float: right;
+  position: relative;
 }
 
 /* Style the links inside the navigation bar */
@@ -20,6 +21,25 @@
   opacity: 0.9;
   color: #00bcd4;
 }
+
+/*Style the notification icon*/
+#notification {
+  position: absolute;
+  top: 17px;
+  right: 263px;
+  background-color: orange;
+  border-radius: 30%;
+  width: 10px;
+  height: 10px;
+  font-size: 0.6em;
+  color: white;
+  font-weight: bold;
+  padding: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
@@ -66,5 +86,10 @@
   }
   .right-border{
     border-right: 0;
+  }
+
+  #notification {
+    top: 66px;
+    left: 85px;
   }
 }
