--- a/app/assets/stylesheets/components/Nav.css
+++ b/app/assets/stylesheets/components/Nav.css
@@ -14,6 +14,7 @@
   text-decoration: none;
   color: #585858;
   font-size: 17px;
+  position: relative;
 }
 
 /* Change the color of links on hover */
@@ -25,8 +26,8 @@
 /*Style the notification icon*/
 #notification {
   position: absolute;
-  top: 17px;
-  right: 263px;
+  top: 3px;
+  right: 0;
   background-color: orange;
   border-radius: 30%;
   width: 10px;
