--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -98,6 +98,44 @@ label{
   text-decoration: none;
   font-size: 1.3em;
 }
+
+.Flash{
+  background: rgba(246, 249, 252, 0.9);
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  font-size: 15px;
+  color: #424770;
+  margin: 0 auto;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -ms-flex-align: center;
+  align-items: center;
+  min-width: 100%;
+  font-size: 1em;
+  padding-left: 1em;
+  padding: 0.6em 0;
+  text-align: center;
+  padding-left: 0;
+}
+
+.Flash.danger{
+  background: #d33838;
+  color:#FFF;
+}
+
+.Flash p{
+  margin: 0;
+  padding: 0;
+  font-weight: 100;
+  text-align: center;
+}
+.ContainerFlash{
+  position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    z-index: 1;
+}
+
 @media only screen and (min-width: 40em) {
   .bigsize{
     font-size: 3em;
@@ -110,6 +148,10 @@ label{
   .Overlay {
     padding: 8em;
     background: rgba(0, 0, 0, 0.25);
+  }
+  .Flash{
+    min-width: 490px;
+    padding-left: 1em;
   }
 }
 @media only screen and (min-width: 64em) {
