--- a/app/views/networks/end_submit.html.erb
+++ b/app/views/networks/end_submit.html.erb
@@ -1,5 +1,11 @@
 <section class="clearfix">
   <div class="sm-col-5 lg-col-5 mx-auto">
-    <p class="center"><%= t('.thank_you_message') %></p>
+    <div class="center">
+      <p class="center"><%= raw t('.thank_you_message') %></p>
+      <br />
+      <img src="https://i.giphy.com/26gsjCZpPolPr3sBy.gif" width="300" />
+      <br /><br />
+      <a href="https://blendinnow.nl">Blendin Team</a>
+    </div>
   </div>
 </section>
