--- a/app/views/networks/new.html.erb
+++ b/app/views/networks/new.html.erb
@@ -1,6 +1,5 @@
-<section class="clearfix">
+<section class="NetworkPage clearfix">
   <div class="sm-col-5 lg-col-5 mx-auto">
-    <h1><%= t('.title') %></h1>
     <%= render 'form', network: @network %>
   </div>
 </section>
