--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,6 +61,7 @@
     </script>
   <% end %>
 
+<% if controller.controller_name === 'networks' %>
   <!--Start of Tawk.to Script-->
   <script type="text/javascript">
   var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -74,5 +75,7 @@
   })();
   </script>
   <!--End of Tawk.to Script-->
+<% end %>
+
 </body>
 </html>
