--- a/app/views/networks/new.html.erb
+++ b/app/views/networks/new.html.erb
@@ -1,5 +1,6 @@
 <section class="NetworkPage clearfix">
   <div class="sm-col-5 lg-col-5 mx-auto">
+    <%= render 'header'%>
     <%= render 'form', network: @network %>
   </div>
 </section>
