footer with css and icons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,8 @@
     <%= yield %>
   </main>
 
+  <%= render 'footer/footer' %>
+
   <% if Rails.env.production? %>
     <!-- Google analytics -->
     <script>
