change email requests

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -5,15 +5,13 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <style type="text/css">
-    /* CLIENT-SPECIFIC STYLES */
-    #outlook a{padding:0;} /* Force Outlook to provide a "view in browser" message */
-    .ReadMsgBody{width:100%;} .ExternalClass{width:100%;} /* Force Hotmail to display emails at full width */
+    #outlook a{padding:0;}
+    .ReadMsgBody{width:100%;} .ExternalClass{width:100%;}
     .ExternalClass, .ExternalClass p, .ExternalClass span, .ExternalClass font, .ExternalClass td, .ExternalClass div {line-height: 100%;} /* Force Hotmail to display normal line spacing */
-    body, table, td, a{-webkit-text-size-adjust:100%; -ms-text-size-adjust:100%;} /* Prevent WebKit and Windows mobile changing default text sizes */
-    table, td{mso-table-lspace:0pt; mso-table-rspace:0pt;} /* Remove spacing between tables in Outlook 2007 and up */
-    img{-ms-interpolation-mode:bicubic;} /* Allow smoother rendering of resized image in Internet Explorer */
+    body, table, td, a{-webkit-text-size-adjust:100%; -ms-text-size-adjust:100%;}
+    table, td{mso-table-lspace:0pt; mso-table-rspace:0pt;}
+    img{-ms-interpolation-mode:bicubic;}
 
-    /* RESET STYLES */
     body{margin:0; padding:0;}
     img{border:0; height:auto; line-height:100%; outline:none; text-decoration:none;}
     table{border-collapse:collapse !important;}
@@ -140,7 +138,6 @@
 
 
 <%= yield %>
-
 <!-- FOOTER -->
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr>
@@ -150,8 +147,8 @@
                     <td style="padding: 20px 0px 20px 0px;">
                         <table width="500" border="0" cellspacing="0" cellpadding="0" align="center" class="responsive-table">
                             <tr>
-                                <td align="center" valign="middle" style="font-size: 12px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#666666;">
-                                    <span class="appleFooter" style="color:#666666;">Tweede Jan van der Heijdenstraat 67-3, 1074 XR</span><br><a href="mailto:info@blendinnow.nl" style="color: #666666; text-decoration: none;">Contact us</a>
+                                <td align="center" valign="middle" style="font-size: 13px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#666666;">
+                                    <span class="appleFooter" style="color:#666666;">Stichting Blendin, Weteringstraat 36, 1017SP Amsterdam</span><br>+31 (0) 6 199 781 14 - <a href="mailto:info@blendinnow.nl" style="color: #666666; text-decoration: none;">Contact us by email</a>
                                 </td>
                             </tr>
                         </table>
