--- a/app/views/blend_mailer/blend_request_email.html.erb
+++ b/app/views/blend_mailer/blend_request_email.html.erb
@@ -1,14 +1,13 @@
 <!-- ONE COLUMN SECTION -->
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr>
-        <td bgcolor="#ffffff" align="center" style="padding: 70px 15px 70px 15px;" class="section-padding">
+        <td bgcolor="#ffffff" align="center" style="padding: 10px 15px 70px 15px;" class="section-padding">
             <table border="0" cellpadding="0" cellspacing="0" width="500" class="responsive-table">
                 <tr>
                     <td>
                         <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                            <tr>
+                            <!-- <tr>
                                 <td>
-                                    <!-- HERO IMAGE -->
                                     <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                         <tbody>
                                              <tr>
@@ -25,7 +24,7 @@
                                         </tbody>
                                     </table>
                                 </td>
-                            </tr>
+                            </tr> -->
                             <tr>
                                 <td>
                                     <!-- COPY -->
@@ -34,10 +33,7 @@
                                             <td align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 30px;" class="padding-copy"><%= t('.main_msg', recipient: @recipient.name, sender:@sender.name ) %></td>
                                         </tr>
                                         <tr>
-                                            <td align="center" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding-copy"><%= @blend.message %></td>
-                                        </tr>
-                                        <tr>
-                                            <td align="center" style="padding: 20px 0 0 0; font-size: 12px; font-style: italic; line-height: 16px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding-copy">Press accept if you would like to share your contact information<br> and start a conversation.</td>
+                                            <td align="center" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding-copy"><%= t('.secundary_msg') %></td>
                                         </tr>
                                     </table>
                                 </td>
@@ -51,10 +47,7 @@
                                                 <table border="0" cellspacing="0" cellpadding="0" class="responsive-table">
                                                     <tr>
                                                         <td align="center">
-                                                          <%= link_to t('.btn_accept'), blend_accept_url(@blend.id, locale: :en), style:"font-size: 16px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; color: #ffffff; text-decoration: none; background-color: #5dec9e; border-top: 15px solid #5dec9e; border-bottom: 15px solid #5dec9e; border-left: 25px solid #5dec9e; border-right: 25px solid #5dec9e; border-left: 25px solid #5dec9e; border-right: 25px solid #5dec9e; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; display: inline-block; margin-right:10px;", class:"mobile-button" %>
-                                                        </td>
-                                                        <td align="center">
-                                                          <%= link_to t('.profile_link'), user_url(@sender, locale: :en), style:"font-size: 16px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; color: #ffffff; text-decoration: none; background-color: #5D9CEC; border-top: 15px solid #5D9CEC; border-bottom: 15px solid #5D9CEC; border-left: 25px solid #5D9CEC; border-right: 25px solid #5D9CEC; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; display: inline-block; margin-right:10px;", class: "mobile-button" %>
+                                                          <%= link_to t('.click_here'), blends_url(locale: :nl), target: '_blank', style:"font-size: 16px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; color: #ffffff; text-decoration: none; background-color: #5D9CEC; border-top: 15px solid #5D9CEC; border-bottom: 15px solid #5D9CEC; border-left: 25px solid #5D9CEC; border-right: 25px solid #5D9CEC; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; display: inline-block; margin-right:10px;", class: "mobile-button" %>
                                                         </td>
                                                     </tr>
                                                 </table>
