--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
+<section>
+
+    <div class="clearfix py2 px2">
+      <div class="banner-event"><p>Join us this Friday 6 April / 5:00 pm - 8:00 pm for a <b>FREE</b> event at <b>BOOST</b> | <a target="_blank" href="https://www.blendinnow.nl/event/blendin-meetup-at-boost/">See more</a></p></div>
+    </div>
+
+</section>
 <section class="Cards CardsContainer">
   <% if @users.empty? %>
     <p class="center"><%= raw t('.no_match_msg_htm')%> <a href="mailto:info@blendinnow.nl">info@blendinnow.nl</a></p>
