--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,9 @@
 
   <main>
     <%= yield %>
+    <div class="feedback-button">
+      Your feedback matters!
+    </div>
   </main>
 
   <%= render 'footer/footer' %>
