added link survery

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,9 +39,11 @@
 
   <main>
     <%= yield %>
-    <div class="feedback-button">
-      Your feedback matters!
-    </div>
+    <a href="https://codegull.typeform.com/to/idrLtj">
+      <div class="feedback-button">
+        Your feedback matters!
+      </div>
+    </a>
   </main>
 
   <%= render 'footer/footer' %>
