--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
-<section>
+<!-- <section>
   <div class="clearfix py2 px2">
     <div class="banner-event"><p>Join us this Friday 6 April / 5:00 pm - 8:00 pm for a <b>FREE</b> event at <b>BOOST</b> | <a target="_blank" href="https://www.blendinnow.nl/event/blendin-meetup-at-boost/">See more</a></p></div>
   </div>
-</section>
+</section> -->
 
 <section class="Cards CardsContainer">
   <% if @users.empty? %>
