Font, logo and active link

--- a/app/assets/stylesheets/components/Button.css
+++ b/app/assets/stylesheets/components/Button.css
@@ -5,7 +5,8 @@
   border-radius: 8px;
   color: #74CCD1;
   font-size: 1.1em;
-  font-family: 'Quicksand', sans-serif;
+  font-family:  'Montserrat', sans-serif;
+  /* font-family: 'Quicksand', sans-serif; */
   font-weight: bold;
   outline: none;
   padding: 0.7em 1em;
