--- a/app/assets/stylesheets/components/Card.scss
+++ b/app/assets/stylesheets/components/Card.scss
@@ -92,7 +92,8 @@ $returnEasing: cubic-bezier(0.4, 0.58, 0.57, 1);
 
 .CardInfo h1 {
   width: 85%;
-  font-family: 'Crete Round', serif;
+  font-family:  'Montserrat', sans-serif;
+  // font-family: 'Crete Round', serif;
   font-size: 2em;
   margin: 0;
   font-weight: normal;
