--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
   <meta property="og:description" content=<%= t('seo.og_description') %>>
   <meta property="og:url" content="https://community.blendinnow.nl">
 
+  <link rel='stylesheet' id='atmosphere_edge_google_fonts-css'  href='https://fonts.googleapis.com/css?family=Montserrat%3A300%2C400%2C500%2C600&#038;subset=latin-ext&#038;ver=1.0.0' type='text/css' media='all' />
+
   <%= csrf_meta_tags %>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crete+Round|Quicksand">
   <%= stylesheet_link_tag    'application', media: 'all' %>
