--- a/app/assets/stylesheets/bass.scss
+++ b/app/assets/stylesheets/bass.scss
@@ -152,6 +152,13 @@
   clear: both
 }
 
+@media only screen and (max-width: 64em) {
+  .clearfix{
+    padding-top: 5px !important;
+  }
+}
+
+
 .left {
   float: left
 }
