--- a/app/assets/stylesheets/components/Auth.css
+++ b/app/assets/stylesheets/components/Auth.css
@@ -17,7 +17,8 @@
 
 }
 .Auth .Link{
-  font-family: 'Crete Round', serif;
+  font-family:  'Montserrat', sans-serif;
+  /* font-family: 'Crete Round', serif; */
   color: #000000;
   font-size: 1.1em;
   text-align: center;
