--- a/app/assets/stylesheets/components/Footer.scss
+++ b/app/assets/stylesheets/components/Footer.scss
@@ -14,7 +14,8 @@ footer{
   .title{
     font-size: 1.6em;
     margin: 0 0 0.5em 0;
-    font-family: 'Crete Round', serif;
+    // font-family: 'Crete Round', serif;
+    font-family:  'Montserrat', sans-serif;
     font-weight: normal;
   }
 
