--- a/app/assets/stylesheets/components/Input.css
+++ b/app/assets/stylesheets/components/Input.css
@@ -4,7 +4,8 @@
   box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.02);
   border-radius: 6px;
   min-width: 100%;
-  font-family: 'Quicksand', sans-serif;
+  font-family:  'Montserrat', sans-serif;
+  /* font-family: 'Quicksand', sans-serif; */
   padding: 0.9em;
   font-size: 1.2em;
   outline: none;
