--- a/app/assets/stylesheets/components/Profile.css
+++ b/app/assets/stylesheets/components/Profile.css
@@ -7,7 +7,8 @@
 }
 
 .ProfileInfo h2{
-  font-family: 'Crete Round', serif;
+  font-family:  'Montserrat', sans-serif;
+  /* font-family: 'Crete Round', serif; */
   font-size: 2em;
   margin: 0.5em 0 0em 0;
   font-weight: normal;
@@ -37,7 +38,8 @@
 }
 .Detail h3 {
   margin: 0 0 0.3em 0;
-  font-family: 'Crete Round', serif;
+  font-family:  'Montserrat', sans-serif;
+  /* font-family: 'Crete Round', serif; */
   font-size: 1.1em;
   color: #4e4e4e;
   font-weight: normal;
@@ -94,7 +96,8 @@
 }
 
 .title-message{
-  font-family: 'Crete Round', serif;
+  font-family:  'Montserrat', sans-serif;
+  /* font-family: 'Crete Round', serif; */
   font-weight: normal;
 }
 
