--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,7 @@
 
 body{
-  font-family: 'Quicksand', sans-serif;
+  font-family:  'Montserrat', sans-serif;
+;
   font-size: 1.1em;
   margin: 0;
   color: #333333;
@@ -23,7 +24,8 @@ q {
   text-align: center;
   font-size: 1.6em;
   margin: 0.3em 0;
-  font-family: 'Crete Round', serif;
+  font-family:  'Montserrat', sans-serif;
+  // font-family: 'Crete Round', serif;
   font-weight: normal;
   margin: 0.3em auto 0.7em auto;
 }
