Mobile view SignUp and LoginIn page on mobile

--- a/app/assets/stylesheets/components/Header.css
+++ b/app/assets/stylesheets/components/Header.css
@@ -32,7 +32,11 @@
 }
 
 @media only screen and (max-width: 64em) {
-  .Logo{
-    float: right;
+  .Header .Logo{
+    float: left;
+    margin-left: 0;
+    margin-top: 5px;
+    width: 50px;
+    height:50px;
   }
 }
