--- a/app/assets/stylesheets/components/Nav.css
+++ b/app/assets/stylesheets/components/Nav.css
@@ -39,7 +39,7 @@
   position: absolute;
   top: 3px;
   right: 0;
-  background-color: orange;
+  background-color: #FD9774;
   border-radius: 30%;
   width: 10px;
   height: 10px;
