--- a/app/assets/stylesheets/components/Profile.css
+++ b/app/assets/stylesheets/components/Profile.css
@@ -21,7 +21,7 @@
 
 .label-local{
   border-radius: 2em;
-  background: #ffa428;
+  background: #FD9774;
   padding: .3em 1em;
   color: #fff;
   font-weight: bold;
