--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -148,7 +148,7 @@ label{
 }
 
 .feedback-button{
-  background: #ffa503;
+  background: #FD9774;
   border-radius: 30px;
   color: #FFF;
   font-weight: bold;
@@ -164,7 +164,7 @@ label{
 }
 
 .feedback-button:hover{
-  background: #ffb530;
+  background: #ce795c;
 }
 
 @media only screen and (min-width: 40em) {
