--- a/app/views/wizard/upload.html.erb
+++ b/app/views/wizard/upload.html.erb
@@ -13,7 +13,7 @@
       <p class="error"></p>
       <div class="center">
         <%= link_to t('.btn_skip'), root_url, class:"Button full back" %>
-        <%= f.submit t('.btn_upload'), class:"Button full" %>
+        <%= f.submit t('.btn_upload'), class:"Button full", id:"upload-photo-btn" %>
       </div>
     <% end %>
   </div>
@@ -26,6 +26,7 @@
   var errorText = "<%= t('.error') %>";
 
   $(function () {
+    $('#upload-photo-btn').attr('disabled', true);
 
     $('.InputUpload').change(function(){
       var input = this;
@@ -37,12 +38,14 @@
 
           reader.onload = function (e) {
              $('#preview-js').attr('src', e.target.result);
+             $('#upload-photo-btn').attr('disabled', false);
           }
          reader.readAsDataURL(input.files[0]);
       }
       else
       {
         $('.error').html(errorText);
+        $('#upload-photo-btn').attr('disabled', true);
       }
     });
 
